idf_component_register(SRCS "controls.cpp"
                     "twai_service.cpp" "main.cpp"
                     "events.cpp" "led.cpp"
                     "imu_service.cpp"
                     "RadioLibCustomHAL.hpp"
                     "encoder_service.cpp"
                    INCLUDE_DIRS "" "include")
