idf_component_register(SRCS "twai_test_main.c" "webserver_service.cpp" "wifi_service.cpp" "controls.cpp"
                     "twai_service.cpp" "main.cpp"
                     "events.cpp" "led.cpp"
                     "imu_service.cpp"
                     "encoder_service.cpp"
                     "index.cpp"
                    INCLUDE_DIRS "include")